# amr_project

./: .gitmodules  readme.md
amr_navigation/: package.xml  setup.cfg  setup.py
amr_navigation/config/: nav2_params.yaml  navigate_to_pose.xml
amr_navigation/launch/: world_launch.py
amr_navigation/maps/: map.pgm  map.yaml
amr_navigation/rviz/: config.rviz
amr_navigation/urdf/: amr.urdf  frames_2026-02-19_04.16.39.gv
amr_navigation/worlds/: amr_world.sdf  amr_world2.sdf
